--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,2 +1,8 @@
-@import './App.css';
-@import './index.css'
+@import './index.css';
+@import './header.css';
+@import './home.css';
+@import './gamemain.css';
+@import './gameoptions.css';
+@import './gameinformation.css';
+@import './gamedisplay.css';
+@import './gamerule.css';
