--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+
+  /* Font */
+  font-family: "Inter", Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* Colour */
+  color: #fff;
+  background-color: #A62AF3;
+  --background-colour-light: #CB77FF;
+  --header-colour: #A62AF3;
+  --button-active: #0EF59C;
+  --yellow:#F0F070;
+  --green:#0EF59C;
+  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,21 +28,43 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
+  font-size: 16px;
 }
 
 h1 {
+  color: #fff;
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+h2 {
+  color: #fff;
+  font-size: 2em;
+  line-height: 1.1;
+}
+
+h3 {
+  color: #fff;
+  font-size: 1em;
+  line-height: 1.1;
+}
+
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 button {
@@ -42,15 +74,27 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #6f6e6e99;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+#root {
+  margin: 0;
+  padding: 1rem;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
